use PostgreSQL to support cross-platform

--- a/src/BootstrapperLoaderDemo/appsettings.json
+++ b/src/BootstrapperLoaderDemo/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress2014;Database=BootstrapperLoaderDemo;Integrated Security=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=bootstrapper-loader-demo;Username=postgres;Password=mysecretpassword"
   },
   "Logging": {
     "IncludeScopes": false,
