--- a/src/BootstrapperLoaderDemo.Repository/BootstrapperLoaderDemo.Repository.csproj
+++ b/src/BootstrapperLoaderDemo.Repository/BootstrapperLoaderDemo.Repository.csproj
@@ -8,11 +8,12 @@
     <Authors>David Nguyen</Authors>
     <Product>BootstrapperLoaderDemo.Repository</Product>
     <Copyright>Copyright © 2017 David Nguyen</Copyright>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\BootstrapperLoaderDemo.Core\BootstrapperLoaderDemo.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
   </ItemGroup>
 </Project>
