fix issue with post build copy when first time building

--- a/src/BootstrapperLoaderDemo/BootstrapperLoaderDemo.csproj
+++ b/src/BootstrapperLoaderDemo/BootstrapperLoaderDemo.csproj
@@ -12,10 +12,10 @@
   <ItemGroup>
     <ProjectReference Include="..\BootstrapperLoaderDemo.Core\BootstrapperLoaderDemo.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ItemsToCopy Include="./../BootstrapperLoaderDemo.Repository/bin/$(Configuration)/$(TargetFramework)/*.dll" />
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Target Name="PostBuild" AfterTargets="Build">
+    <ItemGroup>
+      <ItemsToCopy Include="./../BootstrapperLoaderDemo.Repository/bin/$(Configuration)/$(TargetFramework)/*" />
+    </ItemGroup>
     <Copy
         SourceFiles="@(ItemsToCopy)"
         DestinationFolder="./bin/$(Configuration)/$(TargetFramework)/">
