--- a/src/BootstrapperLoaderDemo/Web.config
+++ b/src/BootstrapperLoaderDemo/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -53,8 +51,8 @@
         <bindingRedirect oldVersion="0.0.0.0-4.6.1.0" newVersion="4.6.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.2.5.0" newVersion="3.2.5.0"/>
+        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.5.0" newVersion="3.2.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -66,20 +64,19 @@
     </modules>
   </system.webServer>
   <entityFramework>
-    <defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, EntityFramework6.Npgsql"/>
+    <defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, EntityFramework6.Npgsql" />
     <providers>
-      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql"/>
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="Npgsql"/>
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" support="FF"/>
+      <remove invariant="Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" support="FF" />
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Host=localhost;Database=bootstrapper-loader-demo;Username=postgres;Password=password.123"
-         providerName="Npgsql"/>
+    <add name="DefaultConnection" connectionString="Host=localhost;Database=bootstrapper-loader-demo;Username=postgres;Password=password.123" providerName="Npgsql" />
   </connectionStrings>
   <system.codedom>
     <compilers>
